# muc-rm-2020

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp  main_single.cpp
armor/include/: ArmorClass.h  Armor_Detect.h  Img_Manage.h  Num_Select.h
armor/src/: Armor_Detect.cpp  Img_Manage.cpp  Num_Select.cpp
docs/: Mindvision配置.md  RM2020_视觉_能量机关1.0.doc  intro.md  readme.md  另一个流程图（没啥用）.md  数字识别算法原理介绍.docx  目标跟踪Tracking.md  能量机关解决方案.docx  视觉-2020-总工程介绍.md  视觉组入门指南.md  视觉组简述-讲稿.md  视觉组简述.docx
docs/documents/: 2020视觉组长阶段性总结.md  其他学校已知使用思路.md  视觉组-会议记录.md  视觉组-全部任务概括.md  视觉组-全部任务概括（必须了解）.md  视觉组-工程管理经验.md
docs/solutions/: RM2020_视觉_能量机关1.0.docx  数字识别算法原理介绍.md  没啥用的流程图.md  目标跟踪Tracking.md  能量机关解决方案.docx  装甲打分模块.md
docs/tutorials/: Mindvision配置.md  OpenCV-Win-CLion-MinGW环境配置.md  OpenCV_CMake_报错信息记录.md  OpenCV_错误记录.md
energy/include/: Energy.h
energy/src/: Energy.cpp
others/include/: Camera_Input.h  Image_Input.h  Mes_Manage.h  Video_Input.h  config.h
others/src/: Camera_Input.cpp  Mes_Manage.cpp  Video_Input.cpp
xml/: 2020svm_v2_123458.xml
